[gd_scene load_steps=39 format=2]

[ext_resource path="res://asset/Enemy04/idle02.png" type="Texture" id=1]
[ext_resource path="res://asset/Enemy04/idle03.png" type="Texture" id=2]
[ext_resource path="res://asset/Enemy04/idle04.png" type="Texture" id=3]
[ext_resource path="res://asset/Enemy04/idle05.png" type="Texture" id=4]
[ext_resource path="res://asset/Enemy04/idle01.png" type="Texture" id=5]
[ext_resource path="res://asset/Enemy04/attack01.png" type="Texture" id=6]
[ext_resource path="res://asset/Enemy04/walk03.png" type="Texture" id=7]
[ext_resource path="res://asset/Enemy04/attack06.png" type="Texture" id=8]
[ext_resource path="res://asset/Enemy04/attack03.png" type="Texture" id=9]
[ext_resource path="res://asset/Enemy04/jump_landing.png" type="Texture" id=10]
[ext_resource path="res://asset/Enemy04/attack02.png" type="Texture" id=11]
[ext_resource path="res://asset/Enemy04/jump_mid01.png" type="Texture" id=12]
[ext_resource path="res://asset/Enemy04/jump_mid04.png" type="Texture" id=13]
[ext_resource path="res://asset/Enemy04/jump_mid02.png" type="Texture" id=14]
[ext_resource path="res://asset/Enemy04/idle06.png" type="Texture" id=15]
[ext_resource path="res://asset/Enemy04/jump_mid03.png" type="Texture" id=16]
[ext_resource path="res://asset/Enemy04/walk01.png" type="Texture" id=17]
[ext_resource path="res://asset/Enemy04/hit03.png" type="Texture" id=18]
[ext_resource path="res://asset/Enemy04/attack04.png" type="Texture" id=19]
[ext_resource path="res://asset/Enemy04/attack07.png" type="Texture" id=20]
[ext_resource path="res://asset/Enemy04/walk02.png" type="Texture" id=21]
[ext_resource path="res://asset/Enemy04/hit01.png" type="Texture" id=22]
[ext_resource path="res://asset/Enemy04/walk06.png" type="Texture" id=23]
[ext_resource path="res://asset/Enemy04/idle07.png" type="Texture" id=24]
[ext_resource path="res://asset/Enemy04/walk05.png" type="Texture" id=25]
[ext_resource path="res://asset/Enemy04/walk04.png" type="Texture" id=26]
[ext_resource path="res://asset/Enemy04/attack05.png" type="Texture" id=27]
[ext_resource path="res://asset/Enemy04/hit02.png" type="Texture" id=28]
[ext_resource path="res://src/actor/Enemy_reaper.gd" type="Script" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 28 ), ExtResource( 18 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 21 ), ExtResource( 7 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 23 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "landing",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 8 ), ExtResource( 20 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../attackDetektor:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "mati"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("..:collision_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hit" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../attackDetektor:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.211765 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "serang"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_hit"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 19 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 20 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 26 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 54, 11 )

[node name="musuh_reaper" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 29 )
speed = Vector2( 50, 250 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -20, -44 )
frames = SubResource( 1 )
animation = "attack"
frame = 6
playing = true
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 4 )
anims/mati = SubResource( 8 )
anims/serang = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
shape = SubResource( 2 )

[node name="pivot" type="Node2D" parent="."]
position = Vector2( 20, 0 )

[node name="RayCast2D" type="RayCast2D" parent="pivot"]
enabled = true
collision_mask = 8

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -4, 0 )
shape = SubResource( 3 )

[node name="attackDetektor" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackDetektor"]
position = Vector2( 24, 4 )
shape = SubResource( 6 )

[node name="attackArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
modulate = Color( 0.737255, 0.105882, 0.105882, 1 )
position = Vector2( 24, -6 )
shape = SubResource( 7 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="Waittime" type="Timer" parent="."]
one_shot = true

[node name="areatrigger" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="areatrigger"]
position = Vector2( 62, 7 )
shape = SubResource( 9 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="attackDetektor" to="." method="_on_attackDetektor_body_entered"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attackArea_body_entered"]
[connection signal="timeout" from="Waittime" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="areatrigger" to="." method="_on_areatrigger_body_entered"]
[connection signal="body_exited" from="areatrigger" to="." method="_on_areatrigger_body_exited"]
